# koshas

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js
browser-extension/: README.md  manifest.json  popup.html
browser-extension/src/: background.js  pending-store.js  popup.css  popup.js  protocol-url.js
browser-extension/tests/: pending-store.test.js  protocol-url.test.js
docs/: milestones.md  orchestration.md  tasks.md  test-log.md
docs/agents/back-end-engineer/: agent-instructions.md  references.md
docs/agents/design-head/: agent-instructions.md  references.md
docs/agents/product-lead/: references.md  (+1 more)
docs/core-docs/: DESIGN.md  architecture-decisions.md  design-principles.md  koshas-plan-v1.md  koshas-specs-v1.md  team.md  tooling.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser_import.rs  file_scan.rs  file_watcher.rs  lib.rs
src/lib/: app.sass  browser-stubs.ts
src/routes/: +layout.svelte  +page.svelte
theme-templates/: aurora.compiled.js  aurora.jsx  data.js  direction-B-dark.html  direction-B-light.html  koshas-default-dark.html  koshas-default-light.html  koshas-start.html  styling.css  styling.css.map  styling.sass  verdure.compiled.js  verdure.jsx
tools/: tauri-v2
tools/d3-visualization/: SKILL.md
tools/interaction-patterns/: SKILL.md  test-cases.json
tools/rust-desktop-applications/: SKILL.md
tools/tauri-event-system/: SKILL.md  metadata.json
tools/tauri-skills-main/: README.md
(+94 files in other folders)
