[package]
name = "koshas"
version = "0.1.0"
description = "Personal knowledge companion for macOS"
authors = ["Amritanshu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
url = "2.5"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4"
walkdir = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
